# PBR-2-Source

./: .gitignore  README.md  build.bat  build.sh  build.spec  gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
res/: icon.icns
src/: __init__.py  build.spec  cli.py  config.py  gui.py  main.py  main.pyw  preset.py
src/core/: __init__.py  convert.py  image.py  imagemix.py  material.py  texops.py  vmt.py  vmtgen.py  vtf.py
src/core/io/: image.py  imio.py  qtio.py  vtf.py
src/gui/: __init__.py  backend.py  style.py
src/module/: __init__.py  cli.py  config.py  logger.py  preset.py  version.py
src/module/core/: config.py  convert.py  enums.py  export.py  material.py  preset.py  texops.py  vmt.py
src/module/core/io/: icns.py  image.py  imio.py  qtio.py
src/module/gui/: __init__.py  backend.py  settings.py  style.py
