[project]
name = "PBR-2-Source"
version = "2.1.0-beta2"
description = "A Python-powered gui for converting pbr materials into Source Engine-compatible materials."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pyinstaller>=6.9.0",
    "pyside6>=6.5.3",
    "sourcepp>=2025.12.4",
]
